--- a/app/index.html
+++ b/app/index.html
@@ -66,8 +66,8 @@
     <script src="scripts/ace-src-min/worker-json.js"></script>
     <script src="scripts/ace-src-min/theme-monokai.js"></script>
     <script src="scripts/index.js"></script>
-    <script src="js/tags/elements.js"></script>
-    <script src="js/tags/pages.js"></script>
+    <script src="scripts/tags/elements.js"></script>
+    <script src="scripts/tags/pages.js"></script>
     <!-- endbuild -->
 
 
